[package]
name = "coinaddress"
version = "1.0.0"
authors = [ "viraptor@gmail.com" ]
repository = "https://github.com/viraptor/coinaddress"
homepage = "https://github.com/viraptor/coinaddress"
keywords = [ "bitcoin", "litecoin", "address", "validate" ]
license = "MIT"
description = """
Library for validating the base58 hash checksums, including specifically
the bitcoin and litecoin addresses.
"""

[lib]
name = "coinaddress"
path = "coinaddress.rs"
test = true
bench = true

[dependencies.num]
git = "https://github.com/rust-lang/num.git"
